Added day 6, plus some new features and optimizations.

--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <Folder Include="Year2020\Day04\Data\" />
+    <Folder Include="Year2020\Day06\Data\" />
   </ItemGroup>
 
 </Project>
