--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -3,6 +3,15 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <ApplicationIcon>favicon.ico</ApplicationIcon>
+    <Authors>Patrick MacMannis</Authors>
+    <Company>tuple.pro</Company>
+    <Product>Advent of Code Runner</Product>
+    <Description>Advent of Code runner with working solutions.</Description>
+    <PackageProjectUrl>https://adventofcode.com/</PackageProjectUrl>
+    <PackageIcon>favicon.png</PackageIcon>
+    <RepositoryUrl>https://github.com/Pmac627/AdventOfCode</RepositoryUrl>
+    <NeutralLanguage>en-US</NeutralLanguage>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,12 +19,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Year2020\Day04\Data\" />
-    <Folder Include="Year2020\Day06\Data\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
+    <None Include="Assets\favicon.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
